Configured with TLS

--- a/client-service/src/main/resources/application.yml
+++ b/client-service/src/main/resources/application.yml
@@ -2,4 +2,7 @@ grpc:
   client:
     dev-shiv-service:
       address: static://localhost:9000
-      negotiationType: plaintext
+      negotiationType: TLS
+      security:
+        trust-cert-collection: file:"/home/shiv/Samta deck/final-assesment/grpc-microservice-spring-boot-dev/client-service/certs/localhost.cert.pem"
+#        trust-cert-collection: file:/home/shiv/Desktop/localhost.cert.pem
