--- a/grpc-service/src/main/resources/application.yml
+++ b/grpc-service/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 grpc:
   server:
     port: 9000
+    security:
+      enabled: true
+      certificate-chain: file:"/home/shiv/Samta deck/final-assesment/grpc-microservice-spring-boot-dev/grpc-service/certs/localhost.crt"
+#      certificate-chain: file:/home/shiv/Desktop/localhost.crt
+      private-key: file:'/home/shiv/Samta deck/final-assesment/grpc-microservice-spring-boot-dev/grpc-service/certs/localhost.pem'
+#      private-key: file:/home/shiv/Desktop/localhost.pem
