--- a/apache-kafka-consumer-producer/demo/src/main/resources/application.properties
+++ b/apache-kafka-consumer-producer/demo/src/main/resources/application.properties
@@ -2,3 +2,20 @@ kafka.topic=normal-message
 spring.kafka.bootstrap.servers=localhost:9002
 spring.kafka.consumer.group-id=tbp
 server.port=9090
+
+ssl.protocol = TLS
+spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.properties.security.protocol=TLS
+spring.kafka.properties.ssl.truststore.location=file:/home/kafka/kafka_2.12-3.5.1/ssl/kafka.zookeeper.truststore.jks
+spring.kafka.properties.ssl.truststore.password=123456
+spring.kafka.properties.ssl.keystore.location=file:/home/kafka/kafka_2.12-3.5.1/ssl/kafka.zookeeper.keystore.jks
+spring.kafka.properties.ssl.keystore.password=123456
+spring.kafka.properties.ssl.key.password=123456
+
+
+spring.kafka.producer.bootstrap-servers=localhost:9093
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.bootstrap-servers=localhost:9093
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
