--- a/client-service/src/main/resources/application.yml
+++ b/client-service/src/main/resources/application.yml
@@ -4,5 +4,5 @@ grpc:
       address: static://localhost:9000
       negotiationType: TLS
       security:
-        trust-cert-collection: file:"/home/shiv/Samta deck/final-assesment/grpc-microservice-spring-boot-dev/client-service/certs/localhost.cert.pem"
-#        trust-cert-collection: file:/home/shiv/Desktop/localhost.cert.pem
+#        trust-cert-collection: file:"/home/shiv/Samta deck/final-assesment/grpc-microservice-spring-boot-dev/client-service/certs/localhost.cert.pem"
+        trust-cert-collection: file:/home/shiv/Desktop/localhost.cert.pem
