--- a/client-service/src/main/resources/application.yml
+++ b/client-service/src/main/resources/application.yml
@@ -1,8 +1,7 @@
 grpc:
   client:
     dev-shiv-service:
-      address: static://localhost:9000
+      address: static://localhost:80 # This static address of nginx server
       negotiationType: TLS
       security:
-#        trust-cert-collection: file:"/home/shiv/Samta deck/final-assesment/grpc-microservice-spring-boot-dev/client-service/certs/localhost.cert.pem"
         trust-cert-collection: classpath:/certs/localhost.cert.pem
