--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>client-service</module>
         <module>grpc-service</module>
         <module>proto</module>
+        <module>grpc-2</module>
     </modules>
     <groupId>com.dev.shiv</groupId>
     <artifactId>spring-boot-grpc</artifactId>
